# SpikeNN

./: .gitignore  CMakeLists.txt  COPYING
example/: daspnet.cpp  izh06-polychronization.cpp  izh07-reward.cpp  vision.cpp  visnet.cpp
include/: DAHandler.h  GlobalVars.h  IzhikevichNeuron.h  LIFNeuron.h  Layer.h  Logger.h  Network.h  Neuron.h  Synapse.h  VisualNetwork.h
lib/OS_X/: libSpikeNN.dylib
lib/win/Debug/: SpikeNN.lib
lib/win/Release/: SpikeNN.lib
src/: DAHandler.cpp  EasyBMP.cpp  GlobalVars.cpp  IzhikevichNeuron.cpp  LIFNeuron.cpp  Layer.cpp  Logger.cpp  Network.cpp  Neuron.cpp  Synapse.cpp  VisualNetwork.cpp
